kubernetes/11-ingress/07-nginx-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service-ingress-tls
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.demo.com"
    secretName: demo-domain-secret
  rules:
  - host: "nginx.demo.com"
    http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service-clusterip
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-clusterip
            port:
              number: 8080
